--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,18 @@ body {
   background-image: url("/cubes.jpg");
 }
 
+.arbete {
+  max-width: 1500px;
+  margin-left: 50px;
+  border-radius: 10px;
+  margin-top: 600px;
+  max-height: 500px;
+}
+
+.beskrivning {
+  margin-left: 50px;
+  margin-top: 0px;
+}
 nav {
   display: flex;
   justify-content: space-between;
