skapar en underrubrik för att markera var mina projekt börjar visas (som en inledning till en ny del av sidan)

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,10 +5,10 @@ body {
 }
 
 .arbete {
+  display: flex;
   max-width: 1500px;
   margin-left: 50px;
   border-radius: 10px;
-  margin-top: 550px;
   max-height: 500px;
 }
 
@@ -57,11 +57,18 @@ header h1 {
 
 header {
   margin-top: 100px;
-  margin-bottom: 200px;
+  margin-bottom: 100px;
   margin-left: 50px;
   letter-spacing: 1px;
 }
 
 header p {
   font-size: 24px;
+}
+
+.underrubrik {
+  margin-top: 775px;
+  margin-left: 825px;
+  letter-spacing: 1.5px;
+  font-size: 25px;
 }
